--- a/components/account/signin.htm
+++ b/components/account/signin.htm
@@ -19,6 +19,8 @@
             id="userSigninPassword"
             placeholder="Enter your password" />
     </div>
+    
+    <input type="hidden" name="redirect" value="{{ redirect }}" />
 
     <button type="submit" class="btn btn-default">Sign in</button>
 </form>
