--- a/components/account/register.htm
+++ b/components/account/register.htm
@@ -30,5 +30,7 @@
             placeholder="Choose a password" />
     </div>
 
+    <input type="hidden" name="redirect" value="{{ redirect }}" />
+    
     <button type="submit" class="btn btn-default">Register</button>
 </form>
